devel
-----

* Change default output format of arangoexport from `json` to `jsonl`.

* Added startup option `--query.log-failed` to optionally log all failed AQL
  queries to the server log. The option is turned off by default.

* Added startup option `--query.log-memory-usage-threshold` to optionally log
  all AQL queries that have a peak memory usage larger than the configured
  value. The default value is 4GB.

* Added startup option `--query.max-artifact-log-length` to control the
  maximum length of logged query strings and bind parameter values.
  This allows truncating overly long query strings and bind parameter values
  to a reasonable length. Previously the cutoff length was hard-coded.

* Fixed GitHub issue #17291: Fixed a server crash which could occur in case an
  AQL query using a PRUNE or FILTER statement, combined with UDFs (user defined
  functions), got executed.

* Improve cardinality estimate for AQL EnumerateCollectionNode in case a
  `SORT RAND() LIMIT 1` is used. Here, the estimated number of items is at
  most 1.

* ES-1312: fix handling of reaching the WAL archive capacity limit.

* BTS-941: The HTTP API now delivers the correct list of the collection's
  shards in case a collection from an EnterpriseGraph, SmartGraph, Disjoint
  EnterpriseGraph, Disjoint SmartGraph or SatelliteGraph is being used.

* Log the documents counts on leader and follower shards at the end of each
  successful shard synchronization.

* Changed the encoding of revision ids returned by the following REST APIs:
  - GET /_api/collection/<collection-name>/revision: the revision id was
    previously returned as numeric value, and now it will be returned as
    a string value with either numeric encoding or HLC-encoding inside.
  - GET /_api/collection/<collection-name>/checksum: the revision id in
    the "revision" attribute was previously encoded as a numeric value
    in single server, and as a string in cluster. This is now unified so