@@ -38,6 +38,7 @@ IndexIterator::IndexIterator(LogicalCollection* collection,
       _cacheHits(0),
       _cacheMisses(0),
       _hasMore(true),
+      _resetInternals(false),
       _readOwnWrites(readOwnWrites) {
   TRI_ASSERT(_collection != nullptr);
   TRI_ASSERT(_trx != nullptr);
@@ -150,6 +151,8 @@ bool MultiIndexIterator::nextImpl(LocalDocumentIdCallback const& callback,
       return false;
     }
     if (!_current->nextImpl(cb, limit)) {
+      // Destroy iterator no longer used:
+      _current->reset();
       _currentIdx++;
       if (_currentIdx >= _iterators.size()) {
         _current = nullptr;
@@ -180,6 +183,8 @@ bool MultiIndexIterator::nextDocumentImpl(DocumentCallback const& callback,
       return false;
     }
     if (!_current->nextDocumentImpl(cb, limit)) {
+      // Destroy iterator no longer used:
+      _current->reset();
       _currentIdx++;
       if (_currentIdx >= _iterators.size()) {
         _current = nullptr;
@@ -210,6 +215,8 @@ bool MultiIndexIterator::nextCoveringImpl(CoveringCallback const& callback,
       return false;
     }
     if (!_current->nextCoveringImpl(cb, limit)) {
+      // Destroy iterator no longer used:
+      _current->reset();
       _currentIdx++;
       if (_currentIdx >= _iterators.size()) {
         _current = nullptr;
