@@ -1,6 +1,10 @@
 devel
 -----
 
+* Solve a case of excessive memory consumption in certain AQL queries with
+  IN filters with very long lists. Free sub-iterators as soon as they are
+  exhausted.
+
 * Change default output format of arangoexport from `json` to `jsonl`.
 
 * Added startup option `--query.log-failed` to optionally log all failed AQL
